// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers.dangerous_goods is true 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-center-start"
>
  <div
    className="layout-row flex-none content_width layout-wrap layout-align-start-center"
    style={
      Object {
        "margin": "30px 0 70px 0",
      }
    }
  >
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-start-center"
        key="0"
        name="0-container"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
               Container Size
            </p>
            <Tooltip
              icon="fa-info-circle"
              text="size_class"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <NamedSelect
            className="flex-95"
            name="0-container_size"
            onChange={[Function]}
            options={
              Array [
                Array [],
                Array [],
                Array [],
              ]
            }
            value="fcl_20"
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            Cargo Gross Weight
          </p>
          <div
            className="flex-95 layout-row input_box"
          >
            <ValidatedInput
              firstRenderInputs={true}
              name="0-payload_in_kg"
              nextStageAttempt={false}
              onChange={[Function]}
              required={true}
              setFirstRenderInputs={[Function]}
              type="number"
              validationErrors={
                Object {
                  "isDefaultRequiredValue": "Must not be blank",
                  "maxValue": "Value must be less than 32630 kg",
                  "nonNegative": "Must be greater than 0",
                }
              }
              validations={
                Object {
                  "maxValue": [Function],
                  "nonNegative": [Function],
                }
              }
              value={11}
              wrapperClassName="flex-80"
            />
            <div
              className="flex layout-row layout-align-center-center"
            >
              kg
            </div>
          </div>
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            No. of Containers
          </p>
          <NamedSelect
            className="flex-95"
            name="0-quantity"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": 1,
                  "value": 1,
                },
                Object {
                  "label": 2,
                  "value": 2,
                },
                Object {
                  "label": 3,
                  "value": 3,
                },
                Object {
                  "label": 4,
                  "value": 4,
                },
                Object {
                  "label": 5,
                  "value": 5,
                },
                Object {
                  "label": 6,
                  "value": 6,
                },
                Object {
                  "label": 7,
                  "value": 7,
                },
                Object {
                  "label": 8,
                  "value": 8,
                },
                Object {
                  "label": 9,
                  "value": 9,
                },
                Object {
                  "label": 10,
                  "value": 10,
                },
                Object {
                  "label": 11,
                  "value": 11,
                },
                Object {
                  "label": 12,
                  "value": 12,
                },
                Object {
                  "label": 13,
                  "value": 13,
                },
                Object {
                  "label": 14,
                  "value": 14,
                },
                Object {
                  "label": 15,
                  "value": 15,
                },
                Object {
                  "label": 16,
                  "value": 16,
                },
                Object {
                  "label": 17,
                  "value": 17,
                },
                Object {
                  "label": 18,
                  "value": 18,
                },
                Object {
                  "label": 19,
                  "value": 19,
                },
                Object {
                  "label": 20,
                  "value": 20,
                },
              ]
            }
            placeholder={3}
            value={3}
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
          onClick={[Function]}
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <label
              className="input_label flex-none pointy"
              htmlFor="0-dangerous_goods"
            >
              <p>
                Dangerous Goods
              </p>
            </label>
            <Tooltip
              icon="fa-info-circle"
              text="dangerous_goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <[object Object]
            checked={true}
            disabled={true}
            id="0-dangerous_goods"
            onChange={[Function]}
            size="34px"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <i
          className="fa fa-trash delete_icon"
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="add_unit_wrapper content_width"
      >
        <div
          className="layout-row flex-none layout-align-start-center"
          onClick={[Function]}
        >
          <p>
            Add unit
              
          </p>
          <i
            className="fa fa-plus-square-o clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="new_container_placeholder flex-100"
      >
        <div
          className="separator flex-100"
          key="RANDOM_KEY_3"
        >
          <hr />
        </div>
        <div
          className="layout-row flex-100 layout-wrap layout-align-start-center"
          key="-1"
          name="-1-container"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <p
                className="input_label flex-none"
              >
                 Container Size
              </p>
              <Tooltip
                icon="fa-info-circle"
                text="size_class"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <NamedSelect
              className="flex-95"
              name="-1-container_size"
              onChange={[Function]}
              options={Array []}
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              Cargo Gross Weight
            </p>
            <div
              className="flex-95 layout-row input_box"
            >
              <input
                className="flex-80"
                data-hj-whitelist={true}
                type="number"
              />
              <div
                className="flex layout-row layout-align-center-center"
              >
                kg
              </div>
            </div>
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              No. of Containers
            </p>
            <NamedSelect
              className="flex-95"
              name="-1-quantity"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": 1,
                    "value": 1,
                  },
                  Object {
                    "label": 2,
                    "value": 2,
                  },
                  Object {
                    "label": 3,
                    "value": 3,
                  },
                  Object {
                    "label": 4,
                    "value": 4,
                  },
                  Object {
                    "label": 5,
                    "value": 5,
                  },
                  Object {
                    "label": 6,
                    "value": 6,
                  },
                  Object {
                    "label": 7,
                    "value": 7,
                  },
                  Object {
                    "label": 8,
                    "value": 8,
                  },
                  Object {
                    "label": 9,
                    "value": 9,
                  },
                  Object {
                    "label": 10,
                    "value": 10,
                  },
                  Object {
                    "label": 11,
                    "value": 11,
                  },
                  Object {
                    "label": 12,
                    "value": 12,
                  },
                  Object {
                    "label": 13,
                    "value": 13,
                  },
                  Object {
                    "label": 14,
                    "value": 14,
                  },
                  Object {
                    "label": 15,
                    "value": 15,
                  },
                  Object {
                    "label": 16,
                    "value": 16,
                  },
                  Object {
                    "label": 17,
                    "value": 17,
                  },
                  Object {
                    "label": 18,
                    "value": 18,
                  },
                  Object {
                    "label": 19,
                    "value": 19,
                  },
                  Object {
                    "label": 20,
                    "value": 20,
                  },
                ]
              }
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
            onClick={[Function]}
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <label
                className="input_label flex-none pointy"
                htmlFor="-1-dangerous_goods"
              >
                <p>
                  Dangerous Goods
                </p>
              </label>
              <Tooltip
                icon="fa-info-circle"
                text="dangerous_goods"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <[object Object]
              checked={false}
              disabled={true}
              id="-1-dangerous_goods"
              onChange={[Function]}
              size="34px"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`nextStageAttempt is true 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-center-start"
>
  <div
    className="layout-row flex-none content_width layout-wrap layout-align-start-center"
    style={
      Object {
        "margin": "30px 0 70px 0",
      }
    }
  >
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-start-center"
        key="0"
        name="0-container"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
               Container Size
            </p>
            <Tooltip
              icon="fa-info-circle"
              text="size_class"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <NamedSelect
            className="flex-95"
            name="0-container_size"
            onChange={[Function]}
            options={
              Array [
                Array [],
                Array [],
                Array [],
              ]
            }
            value="fcl_20"
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            Cargo Gross Weight
          </p>
          <div
            className="flex-95 layout-row input_box"
          >
            <ValidatedInput
              firstRenderInputs={false}
              name="0-payload_in_kg"
              nextStageAttempt={true}
              onChange={[Function]}
              required={true}
              setFirstRenderInputs={[Function]}
              type="number"
              validationErrors={
                Object {
                  "isDefaultRequiredValue": "Must not be blank",
                  "maxValue": "Value must be less than 32630 kg",
                  "nonNegative": "Must be greater than 0",
                }
              }
              validations={
                Object {
                  "maxValue": [Function],
                  "nonNegative": [Function],
                }
              }
              value={11}
              wrapperClassName="flex-80"
            />
            <div
              className="flex layout-row layout-align-center-center"
            >
              kg
            </div>
          </div>
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            No. of Containers
          </p>
          <NamedSelect
            className="flex-95"
            name="0-quantity"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": 1,
                  "value": 1,
                },
                Object {
                  "label": 2,
                  "value": 2,
                },
                Object {
                  "label": 3,
                  "value": 3,
                },
                Object {
                  "label": 4,
                  "value": 4,
                },
                Object {
                  "label": 5,
                  "value": 5,
                },
                Object {
                  "label": 6,
                  "value": 6,
                },
                Object {
                  "label": 7,
                  "value": 7,
                },
                Object {
                  "label": 8,
                  "value": 8,
                },
                Object {
                  "label": 9,
                  "value": 9,
                },
                Object {
                  "label": 10,
                  "value": 10,
                },
                Object {
                  "label": 11,
                  "value": 11,
                },
                Object {
                  "label": 12,
                  "value": 12,
                },
                Object {
                  "label": 13,
                  "value": 13,
                },
                Object {
                  "label": 14,
                  "value": 14,
                },
                Object {
                  "label": 15,
                  "value": 15,
                },
                Object {
                  "label": 16,
                  "value": 16,
                },
                Object {
                  "label": 17,
                  "value": 17,
                },
                Object {
                  "label": 18,
                  "value": 18,
                },
                Object {
                  "label": 19,
                  "value": 19,
                },
                Object {
                  "label": 20,
                  "value": 20,
                },
              ]
            }
            placeholder={3}
            value={3}
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
          onClick={[Function]}
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <label
              className="input_label flex-none pointy"
              htmlFor="0-dangerous_goods"
            >
              <p>
                Dangerous Goods
              </p>
            </label>
            <Tooltip
              icon="fa-info-circle"
              text="dangerous_goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <[object Object]
            checked={false}
            disabled={true}
            id="0-dangerous_goods"
            onChange={[Function]}
            size="34px"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <i
          className="fa fa-trash delete_icon"
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="add_unit_wrapper content_width"
      >
        <div
          className="layout-row flex-none layout-align-start-center"
          onClick={[Function]}
        >
          <p>
            Add unit
              
          </p>
          <i
            className="fa fa-plus-square-o clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="new_container_placeholder flex-100"
      >
        <div
          className="separator flex-100"
          key="RANDOM_KEY_1"
        >
          <hr />
        </div>
        <div
          className="layout-row flex-100 layout-wrap layout-align-start-center"
          key="-1"
          name="-1-container"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <p
                className="input_label flex-none"
              >
                 Container Size
              </p>
              <Tooltip
                icon="fa-info-circle"
                text="size_class"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <NamedSelect
              className="flex-95"
              name="-1-container_size"
              onChange={[Function]}
              options={Array []}
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              Cargo Gross Weight
            </p>
            <div
              className="flex-95 layout-row input_box"
            >
              <input
                className="flex-80"
                data-hj-whitelist={true}
                type="number"
              />
              <div
                className="flex layout-row layout-align-center-center"
              >
                kg
              </div>
            </div>
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              No. of Containers
            </p>
            <NamedSelect
              className="flex-95"
              name="-1-quantity"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": 1,
                    "value": 1,
                  },
                  Object {
                    "label": 2,
                    "value": 2,
                  },
                  Object {
                    "label": 3,
                    "value": 3,
                  },
                  Object {
                    "label": 4,
                    "value": 4,
                  },
                  Object {
                    "label": 5,
                    "value": 5,
                  },
                  Object {
                    "label": 6,
                    "value": 6,
                  },
                  Object {
                    "label": 7,
                    "value": 7,
                  },
                  Object {
                    "label": 8,
                    "value": 8,
                  },
                  Object {
                    "label": 9,
                    "value": 9,
                  },
                  Object {
                    "label": 10,
                    "value": 10,
                  },
                  Object {
                    "label": 11,
                    "value": 11,
                  },
                  Object {
                    "label": 12,
                    "value": 12,
                  },
                  Object {
                    "label": 13,
                    "value": 13,
                  },
                  Object {
                    "label": 14,
                    "value": 14,
                  },
                  Object {
                    "label": 15,
                    "value": 15,
                  },
                  Object {
                    "label": 16,
                    "value": 16,
                  },
                  Object {
                    "label": 17,
                    "value": 17,
                  },
                  Object {
                    "label": 18,
                    "value": 18,
                  },
                  Object {
                    "label": 19,
                    "value": 19,
                  },
                  Object {
                    "label": 20,
                    "value": 20,
                  },
                ]
              }
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
            onClick={[Function]}
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <label
                className="input_label flex-none pointy"
                htmlFor="-1-dangerous_goods"
              >
                <p>
                  Dangerous Goods
                </p>
              </label>
              <Tooltip
                icon="fa-info-circle"
                text="dangerous_goods"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <[object Object]
              checked={false}
              disabled={true}
              id="-1-dangerous_goods"
              onChange={[Function]}
              size="34px"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`scope.dangerous_goods is true 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-center-start"
>
  <div
    className="layout-row flex-none content_width layout-wrap layout-align-start-center"
    style={
      Object {
        "margin": "30px 0 70px 0",
      }
    }
  >
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-start-center"
        key="0"
        name="0-container"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
               Container Size
            </p>
            <Tooltip
              icon="fa-info-circle"
              text="size_class"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <NamedSelect
            className="flex-95"
            name="0-container_size"
            onChange={[Function]}
            options={
              Array [
                Array [],
                Array [],
                Array [],
              ]
            }
            value="fcl_20"
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            Cargo Gross Weight
          </p>
          <div
            className="flex-95 layout-row input_box"
          >
            <ValidatedInput
              firstRenderInputs={true}
              name="0-payload_in_kg"
              nextStageAttempt={false}
              onChange={[Function]}
              required={true}
              setFirstRenderInputs={[Function]}
              type="number"
              validationErrors={
                Object {
                  "isDefaultRequiredValue": "Must not be blank",
                  "maxValue": "Value must be less than 32630 kg",
                  "nonNegative": "Must be greater than 0",
                }
              }
              validations={
                Object {
                  "maxValue": [Function],
                  "nonNegative": [Function],
                }
              }
              value={11}
              wrapperClassName="flex-80"
            />
            <div
              className="flex layout-row layout-align-center-center"
            >
              kg
            </div>
          </div>
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            No. of Containers
          </p>
          <NamedSelect
            className="flex-95"
            name="0-quantity"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": 1,
                  "value": 1,
                },
                Object {
                  "label": 2,
                  "value": 2,
                },
                Object {
                  "label": 3,
                  "value": 3,
                },
                Object {
                  "label": 4,
                  "value": 4,
                },
                Object {
                  "label": 5,
                  "value": 5,
                },
                Object {
                  "label": 6,
                  "value": 6,
                },
                Object {
                  "label": 7,
                  "value": 7,
                },
                Object {
                  "label": 8,
                  "value": 8,
                },
                Object {
                  "label": 9,
                  "value": 9,
                },
                Object {
                  "label": 10,
                  "value": 10,
                },
                Object {
                  "label": 11,
                  "value": 11,
                },
                Object {
                  "label": 12,
                  "value": 12,
                },
                Object {
                  "label": 13,
                  "value": 13,
                },
                Object {
                  "label": 14,
                  "value": 14,
                },
                Object {
                  "label": 15,
                  "value": 15,
                },
                Object {
                  "label": 16,
                  "value": 16,
                },
                Object {
                  "label": 17,
                  "value": 17,
                },
                Object {
                  "label": 18,
                  "value": 18,
                },
                Object {
                  "label": 19,
                  "value": 19,
                },
                Object {
                  "label": 20,
                  "value": 20,
                },
              ]
            }
            placeholder={3}
            value={3}
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
          onClick=""
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <label
              className="input_label flex-none pointy"
              htmlFor="0-dangerous_goods"
            >
              <p>
                Dangerous Goods
              </p>
            </label>
            <Tooltip
              icon="fa-info-circle"
              text="dangerous_goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <[object Object]
            checked={false}
            disabled={false}
            id="0-dangerous_goods"
            onChange={[Function]}
            size="34px"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <i
          className="fa fa-trash delete_icon"
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="add_unit_wrapper content_width"
      >
        <div
          className="layout-row flex-none layout-align-start-center"
          onClick={[Function]}
        >
          <p>
            Add unit
              
          </p>
          <i
            className="fa fa-plus-square-o clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="new_container_placeholder flex-100"
      >
        <div
          className="separator flex-100"
          key="RANDOM_KEY_2"
        >
          <hr />
        </div>
        <div
          className="layout-row flex-100 layout-wrap layout-align-start-center"
          key="-1"
          name="-1-container"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <p
                className="input_label flex-none"
              >
                 Container Size
              </p>
              <Tooltip
                icon="fa-info-circle"
                text="size_class"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <NamedSelect
              className="flex-95"
              name="-1-container_size"
              onChange={[Function]}
              options={Array []}
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              Cargo Gross Weight
            </p>
            <div
              className="flex-95 layout-row input_box"
            >
              <input
                className="flex-80"
                data-hj-whitelist={true}
                type="number"
              />
              <div
                className="flex layout-row layout-align-center-center"
              >
                kg
              </div>
            </div>
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              No. of Containers
            </p>
            <NamedSelect
              className="flex-95"
              name="-1-quantity"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": 1,
                    "value": 1,
                  },
                  Object {
                    "label": 2,
                    "value": 2,
                  },
                  Object {
                    "label": 3,
                    "value": 3,
                  },
                  Object {
                    "label": 4,
                    "value": 4,
                  },
                  Object {
                    "label": 5,
                    "value": 5,
                  },
                  Object {
                    "label": 6,
                    "value": 6,
                  },
                  Object {
                    "label": 7,
                    "value": 7,
                  },
                  Object {
                    "label": 8,
                    "value": 8,
                  },
                  Object {
                    "label": 9,
                    "value": 9,
                  },
                  Object {
                    "label": 10,
                    "value": 10,
                  },
                  Object {
                    "label": 11,
                    "value": 11,
                  },
                  Object {
                    "label": 12,
                    "value": 12,
                  },
                  Object {
                    "label": 13,
                    "value": 13,
                  },
                  Object {
                    "label": 14,
                    "value": 14,
                  },
                  Object {
                    "label": 15,
                    "value": 15,
                  },
                  Object {
                    "label": 16,
                    "value": 16,
                  },
                  Object {
                    "label": 17,
                    "value": 17,
                  },
                  Object {
                    "label": 18,
                    "value": 18,
                  },
                  Object {
                    "label": 19,
                    "value": 19,
                  },
                  Object {
                    "label": 20,
                    "value": 20,
                  },
                ]
              }
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
            onClick=""
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <label
                className="input_label flex-none pointy"
                htmlFor="-1-dangerous_goods"
              >
                <p>
                  Dangerous Goods
                </p>
              </label>
              <Tooltip
                icon="fa-info-circle"
                text="dangerous_goods"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <[object Object]
              checked={false}
              disabled={false}
              id="-1-dangerous_goods"
              onChange={[Function]}
              size="34px"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`shallow rendering 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-center-start"
>
  <div
    className="layout-row flex-none content_width layout-wrap layout-align-start-center"
    style={
      Object {
        "margin": "30px 0 70px 0",
      }
    }
  >
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="layout-row flex-100 layout-wrap layout-align-start-center"
        key="0"
        name="0-container"
        style={
          Object {
            "position": "relative",
          }
        }
      >
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
               Container Size
            </p>
            <Tooltip
              icon="fa-info-circle"
              text="size_class"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <NamedSelect
            className="flex-95"
            name="0-container_size"
            onChange={[Function]}
            options={
              Array [
                Array [],
                Array [],
                Array [],
              ]
            }
            value="fcl_20"
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            Cargo Gross Weight
          </p>
          <div
            className="flex-95 layout-row input_box"
          >
            <ValidatedInput
              firstRenderInputs={true}
              name="0-payload_in_kg"
              nextStageAttempt={false}
              onChange={[Function]}
              required={true}
              setFirstRenderInputs={[Function]}
              type="number"
              validationErrors={
                Object {
                  "isDefaultRequiredValue": "Must not be blank",
                  "maxValue": "Value must be less than 32630 kg",
                  "nonNegative": "Must be greater than 0",
                }
              }
              validations={
                Object {
                  "maxValue": [Function],
                  "nonNegative": [Function],
                }
              }
              value={11}
              wrapperClassName="flex-80"
            />
            <div
              className="flex layout-row layout-align-center-center"
            >
              kg
            </div>
          </div>
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
        >
          <p
            className="input_label flex-none"
          >
            No. of Containers
          </p>
          <NamedSelect
            className="flex-95"
            name="0-quantity"
            onChange={[Function]}
            options={
              Array [
                Object {
                  "label": 1,
                  "value": 1,
                },
                Object {
                  "label": 2,
                  "value": 2,
                },
                Object {
                  "label": 3,
                  "value": 3,
                },
                Object {
                  "label": 4,
                  "value": 4,
                },
                Object {
                  "label": 5,
                  "value": 5,
                },
                Object {
                  "label": 6,
                  "value": 6,
                },
                Object {
                  "label": 7,
                  "value": 7,
                },
                Object {
                  "label": 8,
                  "value": 8,
                },
                Object {
                  "label": 9,
                  "value": 9,
                },
                Object {
                  "label": 10,
                  "value": 10,
                },
                Object {
                  "label": 11,
                  "value": 11,
                },
                Object {
                  "label": 12,
                  "value": 12,
                },
                Object {
                  "label": 13,
                  "value": 13,
                },
                Object {
                  "label": 14,
                  "value": 14,
                },
                Object {
                  "label": 15,
                  "value": 15,
                },
                Object {
                  "label": 16,
                  "value": 16,
                },
                Object {
                  "label": 17,
                  "value": 17,
                },
                Object {
                  "label": 18,
                  "value": 18,
                },
                Object {
                  "label": 19,
                  "value": 19,
                },
                Object {
                  "label": 20,
                  "value": 20,
                },
              ]
            }
            placeholder={3}
            value={3}
          />
        </div>
        <div
          className="layout-row flex layout-wrap layout-align-start-center"
          onClick={[Function]}
        >
          <div
            className="layout-row flex-100 layout-wrap layout-align-start-center"
          >
            <label
              className="input_label flex-none pointy"
              htmlFor="0-dangerous_goods"
            >
              <p>
                Dangerous Goods
              </p>
            </label>
            <Tooltip
              icon="fa-info-circle"
              text="dangerous_goods"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
          <[object Object]
            checked={false}
            disabled={true}
            id="0-dangerous_goods"
            onChange={[Function]}
            size="34px"
            theme={
              Object {
                "colors": Object {
                  "primary": "#333",
                  "secondary": "#fafafa",
                },
              }
            }
          />
        </div>
        <i
          className="fa fa-trash delete_icon"
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="layout-row flex-100 layout-wrap layout-align-start-center"
    >
      <div
        className="add_unit_wrapper content_width"
      >
        <div
          className="layout-row flex-none layout-align-start-center"
          onClick={[Function]}
        >
          <p>
            Add unit
              
          </p>
          <i
            className="fa fa-plus-square-o clip"
            style={
              Object {
                "background": "-webkit-linear-gradient(left, #333,#fafafa)",
              }
            }
          />
        </div>
      </div>
      <div
        className="new_container_placeholder flex-100"
      >
        <div
          className="separator flex-100"
          key="RANDOM_KEY_0"
        >
          <hr />
        </div>
        <div
          className="layout-row flex-100 layout-wrap layout-align-start-center"
          key="-1"
          name="-1-container"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <p
                className="input_label flex-none"
              >
                 Container Size
              </p>
              <Tooltip
                icon="fa-info-circle"
                text="size_class"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <NamedSelect
              className="flex-95"
              name="-1-container_size"
              onChange={[Function]}
              options={Array []}
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              Cargo Gross Weight
            </p>
            <div
              className="flex-95 layout-row input_box"
            >
              <input
                className="flex-80"
                data-hj-whitelist={true}
                type="number"
              />
              <div
                className="flex layout-row layout-align-center-center"
              >
                kg
              </div>
            </div>
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
          >
            <p
              className="input_label flex-none"
            >
              No. of Containers
            </p>
            <NamedSelect
              className="flex-95"
              name="-1-quantity"
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "label": 1,
                    "value": 1,
                  },
                  Object {
                    "label": 2,
                    "value": 2,
                  },
                  Object {
                    "label": 3,
                    "value": 3,
                  },
                  Object {
                    "label": 4,
                    "value": 4,
                  },
                  Object {
                    "label": 5,
                    "value": 5,
                  },
                  Object {
                    "label": 6,
                    "value": 6,
                  },
                  Object {
                    "label": 7,
                    "value": 7,
                  },
                  Object {
                    "label": 8,
                    "value": 8,
                  },
                  Object {
                    "label": 9,
                    "value": 9,
                  },
                  Object {
                    "label": 10,
                    "value": 10,
                  },
                  Object {
                    "label": 11,
                    "value": 11,
                  },
                  Object {
                    "label": 12,
                    "value": 12,
                  },
                  Object {
                    "label": 13,
                    "value": 13,
                  },
                  Object {
                    "label": 14,
                    "value": 14,
                  },
                  Object {
                    "label": 15,
                    "value": 15,
                  },
                  Object {
                    "label": 16,
                    "value": 16,
                  },
                  Object {
                    "label": 17,
                    "value": 17,
                  },
                  Object {
                    "label": 18,
                    "value": 18,
                  },
                  Object {
                    "label": 19,
                    "value": 19,
                  },
                  Object {
                    "label": 20,
                    "value": 20,
                  },
                ]
              }
              placeholder=""
              value=""
            />
          </div>
          <div
            className="layout-row flex layout-wrap layout-align-start-center"
            onClick={[Function]}
          >
            <div
              className="layout-row flex-100 layout-wrap layout-align-start-center"
            >
              <label
                className="input_label flex-none pointy"
                htmlFor="-1-dangerous_goods"
              >
                <p>
                  Dangerous Goods
                </p>
              </label>
              <Tooltip
                icon="fa-info-circle"
                text="dangerous_goods"
                theme={
                  Object {
                    "colors": Object {
                      "primary": "#333",
                      "secondary": "#fafafa",
                    },
                  }
                }
              />
            </div>
            <[object Object]
              checked={false}
              disabled={true}
              id="-1-dangerous_goods"
              onChange={[Function]}
              size="34px"
              theme={
                Object {
                  "colors": Object {
                    "primary": "#333",
                    "secondary": "#fafafa",
                  },
                }
              }
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
